--- a/gulimall-member/src/main/resources/application.yaml
+++ b/gulimall-member/src/main/resources/application.yaml
@@ -1,1 +1,18 @@
-spring.application.name=gulimall-member
+server:
+  port: 8000
+
+spring:
+  application:
+    name: gulimall-member
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.136.250:3306/gulimall_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    username: root
+    password: 242377
+
+mybatis-plus:
+  mapper-locations: classpath:/mapper/**/*.xml
+  global-config:
+    db-config:
+      id-type: auto
