--- a/gulimall-member/src/main/resources/application.yaml
+++ b/gulimall-member/src/main/resources/application.yaml
@@ -4,6 +4,10 @@ server:
 spring:
   application:
     name: gulimall-member
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.136.250:8848
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
