--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -8,6 +8,10 @@ spring:
     host: 192.168.136.250
     port: 6379
     password: 123456
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 192.168.136.250:8848
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,9 +19,6 @@ spring:
     username: root
     password: 242377
 
-  cloud:
-    openfeign:
-      enabled: true
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
