--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -7,7 +7,6 @@
         <groupId>com.mxj.gulimall</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.mxj.gulimall</groupId>
     <artifactId>gulimall-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gulimall_common</name>
@@ -76,6 +75,17 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+            <version>3.1.4</version>
+        </dependency>
 
     </dependencies>
 
