--- a/gulimall-coupon/src/main/resources/application.yaml
+++ b/gulimall-coupon/src/main/resources/application.yaml
@@ -1,22 +1,22 @@
-server:
-  port: 7000
-
-spring:
-  application:
-    name: gulimall-coupon
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 192.168.136.250:8848
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.136.250:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: 242377
-
-mybatis-plus:
-  mapper-locations: classpath:/mapper/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto
+#server:
+#  port: 7000
+#
+#spring:
+#  application:
+#    name: gulimall-coupon
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 192.168.136.250:8848
+#
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://192.168.136.250:3306/gulimall_sms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: 242377
+#
+#mybatis-plus:
+#  mapper-locations: classpath:/mapper/**/*.xml
+#  global-config:
+#    db-config:
+#      id-type: auto
