--- a/gulimall-coupon/src/main/resources/bootstrap.yaml
+++ b/gulimall-coupon/src/main/resources/bootstrap.yaml
@@ -1,7 +1,18 @@
 spring:
-  application:
-    name: gulimall-coupon
   cloud:
     nacos:
       config:
         server-addr: 192.168.136.250:8848
+        namespace: ba179ccf-bce9-4f94-8fbc-885e4aa7c106
+        group: prod
+        ext-config:
+          - data-id: datasource.yml
+            group: dev
+            refresh: true
+          - data-id: mybatis.yml
+            group: dev
+            refresh: true
+          - data-id: other.yml
+            group: dev
+            refresh: true
+        file-extension: yml
