--- a/renren-fast/pom.xml
+++ b/renren-fast/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath ></relativePath>
 	</parent>
 
@@ -53,6 +53,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.mxj.gulimall</groupId>
+			<artifactId>gulimall-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
