--- a/gulimall-product/src/main/resources/application.yaml
+++ b/gulimall-product/src/main/resources/application.yaml
@@ -20,3 +20,9 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-not-delete-value: 0
+      logic-delete-value: 1
+
+logging:
+  level:
+    com.mxj.gulimall: debug
